force-app/main/default/objects/npsp4hub__Schemas__c/fields/npsp4hub__Identifier__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub__Identifier__c</fullName>
    <label>Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>