force-app/main/default/objects/npsp4hub__Schemas__c/fields/npsp4hub__Processor__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub__Processor__c</fullName>
    <label>Processor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>